--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   "MP3-Info-1.24.tar.gz": 19f7101703c07db3a3fbe9aed4726134d41bcdb9
+  MP3-Info-1.26.tar.gz: 8f4a50d5d24cfacbe53f66530b9d777fc9b31716
